# rawrscope

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: build_and_test.yml  ci.yml
shaders/: line.frag  line.frag.spv  line.vert  line.vert.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv
src/: app.rs  args.rs  audio.rs  audio_source.rs  config.rs  lib.rs  main.rs  panic.rs  render.rs  scope.rs  state.rs  swapchain.rs  ui.rs
src/audio/: connection.rs  mixer.rs  mod.rs  playback.rs  source.rs
src/commands/: app.rs  configure_audio.rs  mod.rs
src/render/: quad.rs
src/scope/: centering.rs
src/scope/centering/: fundamental_phase.rs  none.rs  peak_speed.rs  zero_crossing.rs
