[package]
name = "rawrscope"
version = "0.1.0"
authors = ["rytone <max@ryt.one>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
ambassador = "0.2"
bitflags = "1"
bytemuck = "1"
clap = "2"
cpal = "0.11"
crossbeam-channel = "0.4"
derivative = "2"
directories-next = "1"
fern = { version = "0.6", features = ["colored"] }
futures = "0.3"
git-version = "0.3"
hashlink = { git = "https://github.com/kyren/hashlink", features = ["serde_impl"] }
hound = "3"
imgui = "0.4"
imgui-winit-support = "0.4"
imgui-wgpu = "0.7"
log = "0.4"
parking_lot = "0.11"
rayon = { git = "https://github.com/nikomatsakis/rayon", branch = "latch-target-thread-2" }
rustfft = "3"
sample = "0.11"
samplerate = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
snafu = "0.6"
tinyfiledialogs = "3"
toml = "0.5"
ultraviolet = "0.4"
vk-shader-macros = "0.2"
winit = "0.22"
wgpu = "0.5"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
