[package]
name = "rawrscope"
version = "0.1.0"
authors = ["rytone <max@ryt.one>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
argh = "0.1"
bytemuck = "1"
cpal = "0.13"
crossbeam-channel = "0.5"
directories-next = "2"
futures = "0.3"
hashlink = { version = "0.6", features = ["serde_impl"] }
hound = "3"
imgui = "0.7"
imgui-wgpu = "0.14"
imgui-winit-support = "0.7"
parking_lot = "0.11"
rustfft = "5"
dasp_sample = "0.11"
samplerate = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.5"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
ultraviolet = "0.7"
vk-shader-macros = "0.2"
wgpu = "0.7"
winit = "0.24"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
